# lilpum-ss-client

./: .gitignore  README.md  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  ss_local.rs  ss_node.rs
src/components/: NodeItem.vue
src/types/: SsNode.ts
