[package]
name = "lilpum-ss-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "windows7-compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
#openssl = { version = "0.10.62", features = ["vendored"] }
reqwest = { version = "0", features = ["json", "blocking", "rustls-tls"] }
lazy_static = "1"
log = "0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = "fat"
strip = true


[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
